Fixed pitmap rendering on mobile

--- a/css/admin.css
+++ b/css/admin.css
@@ -8,6 +8,10 @@
   min-height: calc(100vh - 110px);
 }
 
+.dashboard-content {
+    padding:20px;    
+}
+
 .container-map-centered{
   display:flex;
   justify-content:center;
