--- a/css/footer.css
+++ b/css/footer.css
@@ -12,7 +12,7 @@ body {
 }
 
 .footer {
-    position: fixed;
+    position: absolute;
     bottom: 0;
     width: 100%;
     height: 90px;
